final fix font dedication iphone

--- a/styles.css
+++ b/styles.css
@@ -1491,8 +1491,8 @@ footer {
     }
 
     .dedication-text textarea {
-        font-size: 11.6px;
-        line-height: 1.5;
+        font-size: 11px;
+        line-height: 2.27;
     }
 
 }
